--- a/server/home_page.html
+++ b/server/home_page.html
@@ -33,7 +33,7 @@
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
-      <script src="bundle.js"></script>
+      <script src="homepage.bundle.js"></script>
   </body>
 
 </html>
