--- a/server/home_page.html
+++ b/server/home_page.html
@@ -20,8 +20,11 @@
       <select id="gender" type="text"><br><br>
         <option value="female">Female</option>
         <option value="male">Male</option>
-      </select>
+      </select><br><br>
+      image:<p>Click here to upload image </p>
+      <input type="file" id="uploadImage" value="Select Image"><br><br>
       <input type="submit" id="signUpButton" value="Sign Up">
+
 
 
       <!-- <p> Click Through Users </p>
