--- a/server/logged_in.html
+++ b/server/logged_in.html
@@ -5,11 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1> Welcome <p style="display:inline" id="user_name"> </p> </h1>
-
-    <input type="submit" id="revealUser" value="reveal user">
-    <input type="submit" id="go-through-users" value="Go through users">
-
+    <h1 id="welcome"> </h1>
     <p> Users </p>
     <!-- <p>The color is <span id="users"></span></p> -->
 
@@ -24,14 +20,17 @@
     <h3> Notifications </h3>
     <p> You currently have no notifcations </p>
 
+    <input type="submit" id="logOut" value="Log Out">
 
 
-    <script src="logged_in.bundle.js"></script>
+
+
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
+    <script src="logged_in.bundle.js"></script>
 
 
   </body>
