--- a/server/logged_in.html
+++ b/server/logged_in.html
@@ -17,8 +17,8 @@
     <input type="submit" id="dislike" value="dislike">
     <input type="submit" id="testButton" value="testButton">
 
-    <h3> Notifications </h3>
-    <p> You currently have no notifcations </p>
+    <h3> Matches </h3>
+    <p id="matches"> Matches </p>
 
     <input type="submit" id="logOut" value="Log Out">
 
