--- a/server/logged_in.html
+++ b/server/logged_in.html
@@ -18,9 +18,12 @@
     <input type="submit" id="testButton" value="testButton">
 
     <h3> Matches </h3>
-    <p id="matches"> Matches </p>
+    <p id="matches">  </p>
 
     <input type="submit" id="logOut" value="Log Out">
+
+    <div id="content">
+    </div>
 
 
 
