Add react to project

--- a/server/logged_in.html
+++ b/server/logged_in.html
@@ -6,27 +6,12 @@
   </head>
   <body>
     <h1 id="welcome"> </h1>
-    <p> Users </p>
-    <!-- <p>The color is <span id="users"></span></p> -->
+    <p id="displayUsers"> </p>
 
-    <p id="displayUsers"> Hello </p>
-
-    <p><span id="users"></span></p>
-    <div id="buttons"></div>
-    <input type="submit" id="like" value="like">
-    <input type="submit" id="dislike" value="dislike">
-    <input type="submit" id="testButton" value="testButton">
-
-    <h3> Matches </h3>
     <p id="matches">  </p>
-
-    <input type="submit" id="logOut" value="Log Out">
 
     <div id="content">
     </div>
-
-
-
 
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
@@ -34,7 +19,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
     <script src="logged_in.bundle.js"></script>
-
 
   </body>
 </html>
