--- a/server/messaging.html
+++ b/server/messaging.html
@@ -5,6 +5,17 @@
     <title>messaging</title>
   </head>
   <body>
-    <h1> Messaging </h1>
+    <h1 id="welcome"> </h1>
+
+    <div id="content">
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
+    <script src="messaging.bundle.js"></script>
+
   </body>
 </html>
