--- a/server/logged_in.html
+++ b/server/logged_in.html
@@ -13,7 +13,8 @@
     </div>
 
     <p id="matches">  </p>
-    
+    <p id="messages">  </p>
+
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
